--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,24 @@
 
 body {
     font-family: sans-serif;
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
+            grid-gap: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            border: 2px solid #000;
+            background-color: #263238;
+            .board-item {
+                background-color: #485459;
+                border-radius: 5px;
+                border: 2px solid #000;
+            }
+        }
+    }
 }
