--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,7 @@ body .wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 200px;
 }
 
 body .wrapper .board {
@@ -40,5 +41,24 @@ body .wrapper .board .board-item {
   background-color: #485459;
   border-radius: 5px;
   border: 2px solid #000;
+}
+
+body .wrapper .reset-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: 2px solid #000;
+  border-radius: 5px;
+  text-transform: uppercase;
+  background-color: #263238;
+  font-weight: 800;
+  letter-spacing: 1.5px;
+  font-size: 16px;
+  color: #fff;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+
+body .wrapper .reset-button:hover {
+  background-color: #485459;
 }
 /*# sourceMappingURL=styles.css.map */
