--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 200px;
         .board {
             display: grid;
             grid-template-columns: repeat(3, 100px);
@@ -24,6 +25,22 @@ body {
                 border-radius: 5px;
                 border: 2px solid #000;
             }
+        }
+        .reset-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            border: 2px solid #000;
+            border-radius: 5px;
+            text-transform: uppercase;
+            background-color: #263238;
+            font-weight: 800;
+            letter-spacing: 1.5px;
+            font-size: 16px;
+            color: #fff;
+            transition: background-color .3s;
+        }
+        .reset-button:hover {
+            background-color: #485459;
         }
     }
 }
