--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: sans-serif;
+  background-color: #7d8488;
 }
 
 body .wrapper {
@@ -41,6 +42,13 @@ body .wrapper .board .board-item {
   background-color: #485459;
   border-radius: 5px;
   border: 2px solid #000;
+  -webkit-transition: all .1s linear;
+  transition: all .1s linear;
+}
+
+body .wrapper .board .board-item:hover {
+  background-color: #515b60;
+  cursor: pointer;
 }
 
 body .wrapper .reset-button {
@@ -56,6 +64,7 @@ body .wrapper .reset-button {
   color: #fff;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
+  cursor: pointer;
 }
 
 body .wrapper .reset-button:hover {
