--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 
 body {
     font-family: sans-serif;
+    background-color: #7d8488;
     .wrapper {
         display: flex;
         flex-direction: column;
@@ -24,6 +25,11 @@ body {
                 background-color: #485459;
                 border-radius: 5px;
                 border: 2px solid #000;
+                transition: all .1s linear;
+            }
+            .board-item:hover {
+                background-color: #515b60;
+                cursor: pointer;
             }
         }
         .reset-button {
@@ -38,6 +44,7 @@ body {
             font-size: 16px;
             color: #fff;
             transition: background-color .3s;
+            cursor: pointer;
         }
         .reset-button:hover {
             background-color: #485459;
