ADD: Event click reaction

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,11 +44,45 @@ body .wrapper .board .board-item {
   border: 2px solid #000;
   -webkit-transition: all .1s linear;
   transition: all .1s linear;
+  position: relative;
 }
 
 body .wrapper .board .board-item:hover {
   background-color: #515b60;
   cursor: pointer;
+}
+
+body .wrapper .board .board-item-X::before, body .wrapper .board .board-item-X::after {
+  position: absolute;
+  content: "";
+  height: 5px;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  background-color: red;
+}
+
+body .wrapper .board .board-item-X::before {
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+
+body .wrapper .board .board-item-X::after {
+  -webkit-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+}
+
+body .wrapper .board .board-item-O::before {
+  position: absolute;
+  content: "";
+  border-radius: 50%;
+  border: 5px solid blue;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 80%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 body .wrapper .reset-button {
