--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,13 @@ body .wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 200px;
+  margin-top: 100px;
+}
+
+body .wrapper .panel {
+  height: 50px;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 body .wrapper .board {
