--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,12 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 200px;
+        margin-top: 100px;
+        .panel {
+            height: 50px;
+            font-size: 24px;
+            font-weight: 700;
+        }
         .board {
             display: grid;
             grid-template-columns: repeat(3, 100px);
